prost-unwrap-proto-tests/tests/ui/with_suffix_duplicate.stderr
error: Multiple `with_suffix` parameters are not allowed
  --> tests/ui/with_suffix_duplicate.rs:13:6
   |
13 |     .with_suffix(Sane)
   |      ^^^^^^^^^^^
